--- a/index.html
+++ b/index.html
@@ -5,9 +5,33 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <!-- BOOTSTRAP -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-aFq/bzH65dt+w6FI2ooMVUpc+21e0SRygnTpmBvdBgSdnuTN7QbdgL+OapgHtvPp" crossorigin="anonymous">
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
+    <div class="wrapper d-flex justify-content-between text-center mt-4">
+        <div class="container-left">
+             <h2 class="my-4">E' tempo di snack (1)</h2> 
+             <div id="container1" class="container mt-4 py-4">
+             </div>
+
+        </div>
+        <div class="container-mid text-center">
+            <h2 class="my-4">E' tempo di snack (2)</h2>
+            <div id="container2" class="container mt-4 py-4">
+
+            </div>
+
+        </div>
+        <div class="container-right">
+            <h2 class="my-4">E' tempo di snack (bonus)</h2>
+            <div id="container3" class="container mt-4 py-4">
+                
+            </div>
+
+        </div>
+    </div>
     <script src="js/script.js"></script>
 </body>
 </html>
