changes h4 in line 51 with space and comma

--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
                     </div>
                     <button type="button" id="btn" class="btn btn-primary">VAI GENERA NUOVO ARRAY</button>
                 </form>
-                <h4 class="my-4 green-color">L'array filtrato è :</h4>
+                <h4 class="my-4 green-color">Il nuovo array, filtrato dal principale, è :</h4>
                 <ul class="list-inline d-flex justify-content-center text-center"  id="newArray">
 
                 </ul>
